--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -20,7 +20,8 @@ jobs:
       volumes:
         - ${{ github.workspace }}:/github/workspace
   steps:
-      - uses: actions/checkout@v2
+      - 
+        uses: actions/checkout@v2
         with:
           submodules: recursive
       
