add trainer library

--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -16,6 +16,11 @@ libs/architectures/:
   - *workflow
   - 'libs/architectures/**'
 
+libs/trainer/:
+  - *workflow
+  - 'libs/trainer/**'
+
+
 # projects
 projects/sandbox/generate_waveforms/:
   - *workflow
