--- a/libs/trainer/pyproject.toml
+++ b/libs/trainer/pyproject.toml
@@ -14,6 +14,7 @@ nflows = "^0.14"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+ipykernel = "^6.16.0"
 
 [build-system]
 requires = ["poetry-core"]
