--- a/libs/architectures/pyproject.toml
+++ b/libs/architectures/pyproject.toml
@@ -10,9 +10,14 @@ packages = [{include = "mlpe"}]
 python = "^3.9"
 nflows = "^0.14"
 torch = "^1.0"
+"hermes.typeo" = { version="^0.1.4", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
+
+[tool.poetry.extras]
+wrapper = ["hermes.typeo"]
+
 
 [build-system]
 requires = ["poetry-core"]
