--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hermes"]
 	path = hermes
 	url = https://github.com/ML4GW/hermes
+[submodule "ml4gw"]
+	path = ml4gw
+	url = https://github.com/ML4GW/ml4gw
