--- a/libs/trainer/pyproject.toml
+++ b/libs/trainer/pyproject.toml
@@ -10,7 +10,9 @@ packages = [{include = "mlpe"}]
 python = "^3.9"
 h5py = "^3.7.0"
 nflows = "^0.14"
-
+"mlpe.data" = {path = "../data", develop = true}
+"mlpe.architectures" = {path = "../architectures", develop = true}
+"hermes.typeo" = "^0.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
