--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -35,12 +35,13 @@ projects/sandbox/generate_waveforms/:
   - 'projects/sandbox/generate_waveforms/**'
   - 'libs/injection/**'
 
-projects/sandbox/generate_background/:
-  - *workflow
-  - 'projects/sandbox/generate_background/**'
 
-projects/sandbox/train/:
-  - *workflow
-  - 'projects/sandbox/train/**'
-  - 'ml4gw/**'
+# projects/sandbox/generate_background/:
+#  - *workflow
+#  - 'projects/sandbox/generate_background/**'
+
+# projects/sandbox/train/:
+#  - *workflow
+#  - 'projects/sandbox/train/**'
+#  - 'ml4gw/**'
   - 'libs/data/**'
