--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -66,7 +66,7 @@ highpass = 32
 trigger_distance = 0.0
 batch_size = 512
 batches_per_epoch = 200
-max_epochs = 1000
+max_epochs = 100
 
 lr = 4e-3
 min_lr = 1e-5
@@ -77,6 +77,8 @@ early_stop = 20
 device = "cuda"
 profile = false
 use_amp = false
+valid_frac = 0.25
+valid_stride = 0.0625
 
 # arch parameters
 commands.coupling = "${base.coupling}"
