--- a/projects/sandbox/generate_testing_set/pyproject.toml
+++ b/projects/sandbox/generate_testing_set/pyproject.toml
@@ -1,16 +1,21 @@
 [tool.poetry]
-name = "generate-testing-set"
+name = "generate_testing_set"
 version = "0.1.0"
 description = "Generate testing data"
 authors = ["ethan.marx <ethan.marx@ligo.org>"]
 license = "MIT"
-readme = "README.md"
-packages = [{include = "generate_testing_set"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.8,<3.11"
 "mlpe.injection" = {path = "../../../libs/injection", develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
+
+"ml4gw" = {path = "../../../ml4gw/", develop = true}
+mldatafind = {git = "https://github.com/ML4GW/mldatafind.git"}
+typeo = {git = "https://github.com/ML4GW/typeo.git"}
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
