--- a/projects/sandbox/generate_testing_set/pyproject.toml
+++ b/projects/sandbox/generate_testing_set/pyproject.toml
@@ -17,6 +17,9 @@ typeo = {git = "https://github.com/ML4GW/typeo.git"}
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 
+[tool.poetry.scripts]
+generate-testing = "generate_testing_set:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
