--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -2,6 +2,7 @@
 steps = [
     "generate_background:generate-background",
     "generate_waveforms:generate-waveforms",
+    "generate_testing_set:generate-testing",
     "train:train:coupling"
 ]
 
@@ -23,6 +24,7 @@ force_generation = false
 kernel_length = 2
 highpass = 32
 fduration = 1
+waveform_duration = 8
 prior_file = "priors/sine_gaussian.prior"
 coupling = {num_flow_steps = 10}
 
@@ -46,9 +48,10 @@ logdir = "${base.logdir}"
 n_samples = 10000
 prior_file = "${base.prior_file}"
 sample_rate = "${base.sample_rate}" 
-waveform_duration = 8
 force_generation = "${base.force_generation}"
 waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
+waveform_duration = "${base.waveform_duration}"
+
 
 [tool.typeo.scripts.train]
 waveform_dataset = "${base.datadir}/signals.h5"
@@ -82,3 +85,20 @@ valid_stride = 0.0625
 
 # arch parameters
 commands.coupling = "${base.coupling}"
+
+
+[tool.typeo.scripts.generate-testing]
+ifos = "${base.ifos}"
+state_flag = "${base.state_flag}"
+frame_type = "${base.frame_type}"
+channel = "${base.channel}"
+start = "${base.stop}"
+stop = "${base.test_stop}" 
+sample_rate = "${base.sample_rate}"
+prior = "mlpe.injection.priors.sg_uniform"
+waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
+n_samples = 1000
+kernel_length = "${base.kernel_length}"
+waveform_duration = "${base.waveform_duration}"
+datadir = "${base.datadir}"
+logdir = "${base.logdir}"
