--- a/libs/architectures/pyproject.toml
+++ b/libs/architectures/pyproject.toml
@@ -10,13 +10,13 @@ packages = [{include = "mlpe"}]
 python = ">=3.8,<3.11"
 nflows = "^0.14"
 torch = "^1.0"
-"hermes.typeo" = { version="^0.1.4", optional = true}
+typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 
 [tool.poetry.extras]
-wrapper = ["hermes.typeo"]
+wrapper = ["typeo"]
 
 
 [build-system]
