--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -57,13 +57,9 @@ background_path = "${base.datadir}/background.h5"
 logdir = "${base.logdir}"
 outdir = "${base.basedir}/training"
 inference_params = ["frequency", "quality", "hrss", "dec", "psi", "phi"]
-optimizer_fn = "torch.optim.Adam"
-optimizer_kwargs = {weight_decay = 0}
-scheduler_fn = "torch.optim.lr_scheduler.CosineAnnealingLR"
-scheduler_kwargs = {eta_min=1e-5, T_max=10000}
 ifos = "${base.ifos}"
 
-min_lr  = 1e-5,
+min_lr = 1e-5
 decay_steps = 100000
 weight_decay = 0.0
 
