--- a/projects/sandbox/train/pyproject.toml
+++ b/projects/sandbox/train/pyproject.toml
@@ -11,7 +11,7 @@ torch = {version = "^1.12", source = "torch"}
 "mlpe.data" = {path = "../../../libs/data", develop  = true}
 "mlpe.trainer" = {path = "../../../libs/trainer", develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
-"ml4gw" = {path = "../../../ml4gw", develop = true"}
+"ml4gw" = {path = "../../../ml4gw", develop = true}
 
 [[tool.poetry.source]]
 name = "torch"
