--- a/libs/data/pyproject.toml
+++ b/libs/data/pyproject.toml
@@ -13,6 +13,7 @@ python = " >=3.8,<3.11"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
+pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
