--- a/libs/trainer/pyproject.toml
+++ b/libs/trainer/pyproject.toml
@@ -8,15 +8,24 @@ packages = [{include = "mlpe"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
+torch = {version = "^1.12", source = "torch"}
 h5py = "^3.7.0"
 nflows = "^0.14"
+
 "mlpe.data" = {path = "../data", develop = true}
 "mlpe.architectures" = {path = "../architectures", develop = true}
+
 typeo = {git = "https://github.com/ML4GW/typeo.git"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 ipykernel = "^6.16.0"
+
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cu116"
+secondary = true
+default = false
 
 [build-system]
 requires = ["poetry-core"]
