--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -14,7 +14,7 @@ datadir = "${DATA_DIR}"
 logdir = "${BASE_DIR}/log"
 sample_rate = 2048
 ifos = ['H1', 'L1']
-inference_params = ["frequency", "quality", "hrss", "dec", "psi", "phi"]
+inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "phi"]
 trigger_distance = 0.0
 start = 1262607622
 stop = 1262620622
