--- a/projects/sandbox/sampling/pyproject.toml
+++ b/projects/sandbox/sampling/pyproject.toml
@@ -11,6 +11,8 @@ torch = {version = "^1.12", source = "torch"}
 "mlpe.data" = {path = "../../../libs/data", develop  = true}
 "mlpe.trainer" = {path = "../../../libs/trainer", develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
+"mlpe.injection" = {path = "../../../libs/injection", develop = true}
+
 "ml4gw" = {path = "../../../ml4gw", develop = true}
 
 [[tool.poetry.source]]
