--- a/projects/sandbox/data_generation/environment.yaml
+++ b/projects/sandbox/data_generation/environment.yaml
@@ -5,6 +5,6 @@ dependencies:
   - python=3.9
   - gwpy=2.1.0
   - astropy<5.0.0
-  - python-ldas-tools-framecpp
+  - python-ldas-tools-framecpp<3.0.0
   - python-nds2-client
   - lalinference
