add some logging statements to train

--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.pinto]
 steps = [
-    "data_generation:generate-background",
-    "data_generation:generate-waveforms",
+    #"data_generation:generate-background",
+    #"data_generation:generate-waveforms",
     "data_generation:generate-testing",
-    "train:train:coupling",
-    "sampling:sample_testing_set:coupling"
+    "train:train:maf",
+    "sampling:sample_testing_set:maf"
 ]
 
 
