overhaul to incorporate bilby analysis

--- a/projects/sandbox/data_generation/pyproject.toml
+++ b/projects/sandbox/data_generation/pyproject.toml
@@ -23,9 +23,10 @@ pycbc = "^2.1.0"
 pytest = "^7.2.0"
 
 [tool.poetry.scripts]
-generate-background = "data_generation.generate_background:main"
-generate-testing = "data_generation.generate_testing_set:main"
-generate-waveforms = "data_generation.generate_waveforms:main"
+generate-background = "data_generation.background:main"
+generate-waveforms = "data_generation.waveforms:main"
+generate-pp-plot-injections = "data_generation.pp_plot_injections:main"
+generate-bilby-injections = "data_generation.bilby_injections:main"
 
 [build-system]
 requires = ["poetry-core"]
