--- a/projects/sandbox/bilby/pyproject.toml
+++ b/projects/sandbox/bilby/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = ">=3.9,<3.11"
 typeo = {git = "https://github.com/ML4GW/typeo.git"}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
-
+"mlpe.injection" = {path = "../../../libs/injection", develop = true} # needed for loading sg waveform
 
 [tool.poetry.scripts]
 analyze-with-bilby = "bilby_analysis:main"
